include/pan_cdefs.h

typedef uint32_t PanError;
typedef uintptr_t PanConn;
typedef uintptr_t PanListenConn;
typedef uintptr_t PanConnSockAdapter;
typedef uintptr_t PanListenSockAdapter;