rust/src/bindings.rs

extern "C" {
    #[doc = "\\brief Open a Unix datagram socket at `listen_addr` as proxy for `pan_conn` or scion_socket (any SocketLike type).\n\\attention deprecated in favour of PanNewListenSockAdapter2\nReason:\tconversion of C to Go string with func C.GoString(p *_Ctype_char) string has been repeatedly found to be unreliable and cause bugs.\nAll packets received by `pan_conn` are forwarded from `listen_addr` to `client_addr`.\nAll packets received from the Unix socket are forwarded to `pan_conn`.\nThe SCION address of the source or destination is prepended to the payload in a\n32 byte header:\n\\verbatim\nbyte 0       1       2       3       4       5       6       7\n+-------+-------+-------+-------+-------+-------+-------+-------+\n0 |    ISD (BE)   |                     ASN (BE)                  |\n+-------+-------+-------+-------+-------+-------+-------+-------+\n8 |    Host Addr. Length (LE)     |                               |\n+-------+-------+-------+-------+                               |\n16 |                         Host Address (BE)                     |\n+                               +-------+-------+-------+-------+\n24 |                               | UDP Port (LE) |       0       |\n+-------+-------+-------+-------+-------+-------+-------+-------+\nBE = big-endian\nLE = little-endian\n\\endverbatim\n\n\\param[in] pan_conn Listening PAN connection or ScionSocket (any type that implements SocketLike).\n\\param[in] listen_addr Local address of the socket in the file system.\nOn the 'FFI caller' side a unix domain socket must have been constructed an bound to this address\nbefore the adapter is constructed.\n\\param[in] client_addr Address of the other end of the connection in the C part\nof the program.\n\\param[out] adapter Socket adapter object.\n\\ingroup adapter"]
    pub fn PanNewListenSockAdapter(
        pan_conn: PanListenConn,
        listen_addr: *const ::std::os::raw::c_char,
        client_addr: *const ::std::os::raw::c_char,
        adapter: *mut PanListenSockAdapter,
    ) -> PanError;
}
extern "C" {
    pub fn PanNewListenSockAdapter2(
        pan_conn: PanListenConn,
        listen_addr: *const ::std::os::raw::c_char,
        len1: ::std::os::raw::c_int,
        client_addr: *const ::std::os::raw::c_char,
        len2: ::std::os::raw::c_int,
        adapter: *mut PanListenSockAdapter,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close the Unix domain socket **and the PAN connection**.\n\\ingroup adapter"]
    pub fn PanListenSockAdapterClose(adapter: PanListenSockAdapter) -> PanError;
}
extern "C" {
    #[doc = "\\brief Open a Unix datagram socket at `listen_addr` as proxy for `pan_conn`.\n\nAll packets received by pan_conn are forwarded from `listen_addr` to `client_addr`.\nAll packets received from the unix socket are forwarded to `pan_conn`.\n\n\\param[in] pan_conn Connected PAN connection.\n\\param[in] listen_addr Local address of the unix socket in the file system.\n\\param[in] client_addr Address of the other end of the connection in the C part\nof the program.\n\\param[out] adapter Socket adapter object.\n\\ingroup adapter"]
    pub fn PanNewConnSockAdapter(
        pan_conn: PanConn,
        listen_addr: *const ::std::os::raw::c_char,
        client_addr: *const ::std::os::raw::c_char,
        adapter: *mut PanConnSockAdapter,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close the Unix domain socket **and the PAN connection**.\n\\ingroup adapter"]
    pub fn PanConnSockAdapterClose(adapter: PanConnSockAdapter) -> PanError;
}
extern "C" {
    #[doc = "\\brief Open a Unix stream socket at `listen_addr` as proxy for `pan_conn` or 'scion_socket'(any SocketLike).\n\nBehaves identical to `PanNewListenSockAdapter` except that a stream socket is\nused instead of a datagram socket. Packet borders in the stream are determined\nby prepending a four byte message length (little endian) in front of every\npacket sent or received on the Unix socket.\n\nWhen initially created, the socket will listens for and accept exactly one\nconnection.\n\nThe stream variants of the socket adapters are intended for systems lacking\nsupport for Unix datagram sockets, e.g., Windows. A more native solution on\nWindows might be named pipes, however they have a very different API from\nsockets.\n\n\\param[in] pan_conn Listening PAN connection.\n\\param[in] listen_addr Local address of the socket in the file system.\n\\param[out] adapter Socket adapter object.\n\\ingroup adapter"]
    pub fn PanNewListenSSockAdapter(
        pan_conn: PanListenConn,
        listen_addr: *const ::std::os::raw::c_char,
        adapter: *mut PanListenSSockAdapter,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close the Unix domain socket **and the PAN connection**.\n\\ingroup adapter"]
    pub fn PanListenSSockAdapterClose(adapter: PanListenSSockAdapter) -> PanError;
}
extern "C" {
    #[doc = "\\brief Open a Unix stream socket at `listen_addr` as proxy for `pan_conn`.\n\nBehaves identical to `PanNewConnSockAdapter` except that a stream socket is\nused instead of a datagram socket. Packet borders in the stream are determined\nby prepending a four byte message length (little endian) in front of every\npacket sent or received on the Unix socket.\n\nWhen initially created, the socket will listens for and accept exactly one\nconnection.\n\nThe stream variants of the socket adapters are intended for systems lacking\nsupport for Unix datagram sockets, e.g., Windows. A more native solution on\nWindows might be named pipes, however they have a very different API from\nsockets.\n\n\\param[in] pan_conn Connected PAN connection.\n\\param[in] listen_addr Local address of the Unix socket in the file system.\n\\param[out] adapter Socket adapter object.\n\\ingroup adapter"]
    pub fn PanNewConnSSockAdapter(
        pan_conn: PanConn,
        listen_addr: *const ::std::os::raw::c_char,
        adapter: *mut PanConnSSockAdapter,
    ) -> PanError;
}
extern "C" {
    #[doc = "\\brief Close the Unix domain socket **and the PAN connection**.\n\\ingroup adapter"]
    pub fn PanConnSSockAdapterClose(adapter: PanConnSSockAdapter) -> PanError;
}
